[mv3] Code review re. re-worked dashboard
Related commit:
https://github.com/gorhill/uBlock/commit/ae4754415c9a01f18d3219972ef35b959536891f

Fine-tuned visuals; fixed sublist quirks related to admin-selected
lists.

--- a/platform/mv3/extension/css/dashboard.css
+++ b/platform/mv3/extension/css/dashboard.css
@@ -7,9 +7,6 @@
     flex-wrap: wrap;
     overflow-x: hidden;
     padding: 0;
-    position: sticky;
-    top: 0;
-    z-index: 100;
     }
 .tabButton {
     background-color: transparent;
@@ -43,6 +40,8 @@ body[data-pane="about"] #dashboard-nav .tabButton[data-pane="about"] {
 
 body > section {
     display: none;
+    overflow: auto;
+    padding-bottom: 8rem;
     }
 body[data-pane="settings"] > section[data-pane="settings"],
 body[data-pane="rulesets"] > section[data-pane="rulesets"],
