[mv3] Add ability for admins to disable features
New managed setting:

"disabledFeatures": {
  "title": "User interface features to disable",
  "description": "A list of tokens, each of which correspond to a user interface feature to disable.",
  "type": "array",
  "items": { "type": "string" }
}

Supported tokens:
- `dashboard`: Prevent access to all dashboard settings
- `filteringMode`: Prevent changes to the default filtering mode,
  or the current filtering mode of any site

Related feedback:
https://github.com/uBlockOrigin/uBOL-home/discussions/35#discussioncomment-11326086

--- a/platform/mv3/extension/css/settings.css
+++ b/platform/mv3/extension/css/settings.css
@@ -1,3 +1,6 @@
+body.loading {
+    visibility: hidden;
+    }
 body .firstRun {
     display: none;
     }
@@ -11,6 +14,17 @@ h3 {
     }
 p {
     white-space: pre-line;
+    }
+
+body[data-forbid~="dashboard"] #dashboard-nav [data-pane="settings"],
+body[data-forbid~="dashboard"] section[data-pane="settings"],
+body[data-forbid~="dashboard"] #dashboard-nav [data-pane="rulesets"],
+body[data-forbid~="dashboard"] section[data-pane="rulesets"] {
+    display: none;
+    }
+body[data-forbid~="filteringMode"] section[data-pane="settings"] > div:has(> h3[data-i18n="defaultFilteringModeSectionLabel"]),
+body[data-forbid~="filteringMode"] section[data-pane="settings"] > div:has(> h3[data-i18n="filteringMode0Name"]) {
+    display: none;
     }
 
 #showBlockedCount:has(input[type="checkbox"][disabled]) {
