[mv3] Implement strict blocking
Related issue:
https://github.com/uBlockOrigin/uBOL-home/issues/214

This implements basic functionality for strict blocking, i.e. the
ability to block navigation to undesirable websites. This is a
first implementation, which converts only filters that are plain
hostnames.

Unlike with uBO, it is not possible to know from which ruleset a
blocking rule originates. Nonetheless, users will have to make a
choice as to whether navigation should proceed or not.

A setting has been added to the dashboard to wholly enable/disable
strict blocking. It is enabled by default.

Potential future improvements, pending investigation on feasability
in an MV3 framework:
- Extend coverage to explicit `document` filters
- Leverage and use `urlskip=` filters in the blocking page in order
  to proceed while bypassing unwanted redirects.

--- a/platform/mv3/extension/css/settings.css
+++ b/platform/mv3/extension/css/settings.css
@@ -12,8 +12,11 @@ body.firstRun .firstRun {
 h3 {
     margin: 1em 0;
     }
-p {
-    white-space: pre-line;
+
+label + legend {
+    color: color-mix(in srgb, currentColor 69%, transparent);
+    font-size: small;
+    margin-inline-start: var(--default-gap-large);
     }
 
 body[data-forbid~="dashboard"] #dashboard-nav [data-pane="settings"],
