[mv3] Make strict-blocking checkbox dependent on filtering mode
Related feedback:
https://github.com/uBlockOrigin/uBOL-home/issues/214#issuecomment-2528072997

--- a/platform/mv3/extension/css/settings.css
+++ b/platform/mv3/extension/css/settings.css
@@ -30,8 +30,9 @@ body[data-forbid~="filteringMode"] section[data-pane="settings"] > div:has(> h3[
     display: none;
     }
 
-#showBlockedCount:has(input[type="checkbox"][disabled]) {
-    opacity: 0.5;
+label:has(input[type="checkbox"][disabled]),
+label:has(input[type="checkbox"][disabled]) + legend {
+    filter: var(--checkbox-disabled-filter);
     }
 
 #defaultFilteringMode {
