Fix background color of navigation bar
Related commit:
https://github.com/gorhill/uBlock/commit/b604524c2f6354674a56963208a0efc1fdb5e4d7

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -14,6 +14,7 @@ body.notReady {
     }
 #dashboard-nav {
     align-items: center;
+    background-color: var(--surface-1);
     border: 0;
     border-bottom: 1px solid var(--border-1);
     display: flex;
