--- a/platform/mv3/extension/css/popup.css
+++ b/platform/mv3/extension/css/popup.css
@@ -4,21 +4,24 @@
     top: -20%;
     }
 
+:root {
+    --popup-min-width: calc(
+        var(--filtering-mode-slider-width) +
+        var(--filtering-mode-button-size)
+    );
+}
+
 :root body,
 :root.mobile body {
     --font-size: 14px;
     --popup-gap: var(--font-size);
     --popup-gap-thin: calc(0.5 * var(--popup-gap));
     --popup-gap-extra-thin: calc(0.25 * var(--popup-gap));
-    --popup-main-min-width: calc(
-        var(--filtering-mode-slider-width) +
-        var(--filtering-mode-button-size)
-    );
     --popup-firewall-min-width: 30em;
     --popup-rule-cell-width: 5em;
     font-size: var(--font-size);
     line-height: 20px;
-    min-width: 100%;
+    min-width: var(--popup-min-width);
     }
 :root body.loading {
     opacity: 0;
@@ -37,13 +40,9 @@ a {
     display: flex;
     flex-direction: column;
     max-width: 340px;
-    min-width: var(--popup-main-min-width);
     }
 :root.portrait #main {
     align-self: inherit;
-    }
-:root.mobile #main {
-    /*min-width: 100%;*/
     }
 hr {
     border: 0;
