[mv3] Give admins ability to prevent usage of zapper
Related issue:
https://github.com/uBlockOrigin/uBOL-home/pull/341

--- a/platform/mv3/extension/css/popup.css
+++ b/platform/mv3/extension/css/popup.css
@@ -68,8 +68,9 @@ hr {
 body[data-forbid~="filteringMode"] .filteringModeSlider {
     pointer-events: none;
     }
-body[data-forbid~="dashboard"] #gotoDashboard {
-    display: none;
+body[data-forbid~="dashboard"] #gotoDashboard,
+body[data-forbid~="zapper"] #gotoZapper {
+    visibility: hidden;
     }
 
 #filteringModeText {
