--- a/src/css/common.css
+++ b/src/css/common.css
@@ -37,6 +37,7 @@
     --default-gap-small: 12px;
     --default-gap-xsmall: 8px;
     --default-gap-xxsmall: 4px;
+    --button-font-size: max(calc(var(--font-size) * 0.875), 14px);
     }
 
 /* Common uBO styles */
@@ -85,7 +86,7 @@ button {
     color: var(--button-ink);
     display: inline-flex;
     fill: var(--button-ink);
-    font-size: max(calc(var(--font-size) * 0.875), 14px);
+    font-size: var(--button-font-size);
     justify-content: center;
     min-height: 36px;
     padding: 0 var(--font-size);
