[mv3] Add support for custom CSS-based cosmetic filters
Related issue:
https://github.com/uBlockOrigin/uBOL-home/issues/325

This is a first version, with support only for custom filters which are
plain CSS selectors. Future versions will extend support to style-based
and procedural cosmetic filters.

Manually text-editing existing custom filters is currently not supported,
this will be added in a future version in the Develop pane. To remove
existing custom filters, the "Remove a custom filter" tool can be used.

--- a/platform/mv3/extension/css/popup.css
+++ b/platform/mv3/extension/css/popup.css
@@ -21,7 +21,7 @@
     min-width: var(--popup-min-width);
     }
 :root body.loading {
-    opacity: 0;
+    visibility: hidden;
     }
 a {
     color: var(--ink-1);
@@ -36,16 +36,12 @@ a {
     align-self: flex-start;
     display: flex;
     flex-direction: column;
-    max-width: 340px;
     }
 :root.portrait #main {
     align-self: inherit;
     }
 hr {
-    border: 0;
-    border-top: 1px solid var(--hr-ink);
-    margin: 0;
-    padding: 0;
+    margin: 0.5em 0;
     }
 
 #hostname {
@@ -69,8 +65,9 @@ body[data-forbid~="filteringMode"] .filteringModeSlider {
     pointer-events: none;
     }
 body[data-forbid~="dashboard"] #gotoDashboard,
-body[data-forbid~="zapper"] #gotoZapper {
-    visibility: hidden;
+body[data-forbid~="zapper"] #gotoZapper,
+body[data-forbid~="picker"] #gotoPicker {
+    display: none;
     }
 
 #filteringModeText {
@@ -131,126 +128,51 @@ body.needReload #refresh {
     visibility: visible;
     }
 
-#rulesetStats {
-    padding: 0 var(--popup-gap-thin);
-    }
-#rulesetStats .rulesetDetails h1 {
-    font-size: 1em;
-    font-weight: normal;
-    margin: 0.5em 0 0.25em 0;
-    }
-#rulesetStats .rulesetDetails p {
-    color: var(--ink-2);
-    font-size: var(--font-size-smaller);
-    margin: 0.25em 0 0.5em 0.5em;
-    }
-
-.itemRibbon {
-    column-gap: var(--popup-gap);
-    display: grid;
-    grid-auto-columns: 1fr;
-    grid-auto-flow: column;
-    grid-template: auto / 1fr 1fr;
-    margin: var(--popup-gap);
-    }
-.itemRibbon > span + span {
-    text-align: end;
-    }
-
 .toolRibbon {
-    align-items: start;
-    background-color: var(--popup-toolbar-surface);
-    display: grid;
-    grid-auto-columns: 1fr;
-    grid-auto-flow: column;
-    grid-template: auto / repeat(4, 1fr);
-    justify-items: stretch;
-    white-space: normal;
+    display: flex;
+    flex-direction: column;
+    font-size: calc(var(--font-size) - 1px);
+    line-height: calc(var(--font-size) * 2.2);
+    white-space: nowrap;
+    }
+:root:not(.isHTTP) .needHTTP {
+    display: none;
+    }
+
+.toolRibbon > label {
+    font-size: small;
+    color: var(--ink-2);
+    line-height: calc(var(--font-size) * 1.8);
+    margin-inline-start: 0.5em;
     }
 .toolRibbon .tool {
     cursor: pointer;
     display: flex;
-    flex-direction: column;
-    font-size: 1.4em;
-    min-width: 32px;
-    padding: var(--popup-gap)
-             var(--popup-gap-extra-thin);
     unicode-bidi: embed;
-    visibility: hidden;
     }
 .toolRibbon .tool:hover {
     color: var(--ink-1);
         fill: var(--ink-1);
     }
-.toolRibbon .tool.enabled {
-    visibility: visible;
+.toolRibbon .tool .fa-icon {
+    font-size: 1.4em;
+    min-width: 1.4em;
     }
-.toolRibbon .tool .caption {
-    color: var(--ink-2);
-    font: 10px/12px sans-serif;
-    margin-top: 6px;
-    text-align: center;
+.toolRibbon .tool:not(.enabled) {
+    display: none;
     }
 body.mobile.no-tooltips .toolRibbon .tool {
     font-size: 1.6em;
     }
 .toolRibbon.genericTools {
-    margin-bottom: 0;
+    margin-bottom: 0;       
     }
 
-#moreOrLess {
-    column-gap: 0;
-    display: grid;
-    grid-template: auto / 1fr 1fr;
-    justify-items: stretch;
-    margin: 1px 0 0 0;
-    }
-#moreOrLess > span {
-    cursor: pointer;
-    margin: 0;
-    padding: var(--popup-gap-thin) var(--popup-gap);
-    user-select: none;
-    white-space: nowrap;
-    }
-#moreButton .fa-icon {
-    transform: rotate(180deg);
-    }
-#lessButton {
-    border-inline-start: 1px solid var(--surface-1);
-    text-align: end;
-    }
-body[data-section="a b"] #moreButton {
-    pointer-events: none;
-    visibility: hidden;
-    }
-body[data-section=""] #lessButton {
-    pointer-events: none;
-    visibility: hidden;
-    }
 body:not([data-section~="a"]) [data-section="a"] {
     display: none;
     }
 body:not([data-section~="b"]) [data-section="b"] {
     display: none;
-    }
-
-/* configurable UI elements */
-:root:not(.mobile) .toolRibbon .caption,
-:root.mobile body.no-tooltips .toolRibbon .caption,
-:root.mobile body[data-ui~="-captions"] .toolRibbon .caption {
-    display: none;
-    }
-:root.mobile .toolRibbon .caption,
-:root:not(.mobile) body[data-ui~="+captions"] .toolRibbon .caption {
-    display: inherit;
-    }
-:root:not(.mobile) .toolRibbon .tool,
-:root.mobile body.no-tooltips .toolRibbon .tool,
-:root.mobile body[data-ui~="-captions"] .toolRibbon .tool {
-    padding: var(--popup-gap) var(--popup-gap-thin);
-    }
-:root.mobile #moreOrLess > span {
-    padding: var(--popup-gap);
     }
 
 /* horizontally-constrained viewport */
@@ -265,9 +187,6 @@ body:not([data-section~="b"]) [data-section="b"] {
 :root.desktop {
     display: flex;
     }
-:root.desktop body {
-    --popup-gap: calc(var(--font-size) * 0.875);
-    }
 :root.desktop .rulesetTools [id]:hover {
     background-color: var(--popup-ruleset-tool-surface-hover);
     }
@@ -276,12 +195,4 @@ body:not([data-section~="b"]) [data-section="b"] {
     }
 :root.desktop .tool:hover {
     background-color: var(--popup-toolbar-surface-hover);
-    }
-:root.desktop #moreOrLess > span:hover {
-    background-color: var(--surface-2);
-    /* background-color: var(--popup-toolbar-surface-hover); */
-    }
-
-#templates {
-    display: none;
     }
