--- a/platform/mv3/extension/css/unpicker-ui.css
+++ b/platform/mv3/extension/css/unpicker-ui.css
@@ -42,8 +42,8 @@
     padding: 0.5em;
 }
 #ubol-unpicker .customFilter.on >  span.selector {
-    background-color: var(--ink-1);
-    color: var(--surface-1);
+    background-color: var(--accent-surface-1);
+    color: var(--accent-ink-1);}
 }
 #ubol-unpicker .customFilter.removed >  span.selector {
     text-decoration-line: line-through;
